--- a/documentation/html/async_8cpp.html
+++ b/documentation/html/async_8cpp.html
@@ -78,7 +78,8 @@ $(function() {
 </div><div class="textblock"><div class="dynheader">
 Граф включаемых заголовочных файлов для async.cpp:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="async_8cpp__incl.svg" width="467" height="291"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="async_8cpp__incl.svg" width="467" height="291"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 </div>
 <p><a href="async_8cpp_source.html">См. исходные тексты.</a></p>
