--- a/documentation/html/client_8cpp.html
+++ b/documentation/html/client_8cpp.html
@@ -79,7 +79,8 @@ $(function() {
 </div><div class="textblock"><div class="dynheader">
 Граф включаемых заголовочных файлов для client.cpp:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="client_8cpp__incl.svg" width="491" height="127"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="client_8cpp__incl.svg" width="491" height="127"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </div>
 </div>
 <p><a href="client_8cpp_source.html">См. исходные тексты.</a></p>
