--- a/documentation/html/group__rand__sseh.html
+++ b/documentation/html/group__rand__sseh.html
@@ -72,7 +72,8 @@ $(function() {
 <div class="dynheader">
 Граф связей класса rand_sse.h:</div>
 <div class="dyncontent">
-<center><table><tr><td><div class="center"><iframe scrolling="no" frameborder="0" src="group__rand__sseh.svg" width="204" height="36"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+<center><table><tr><td><div class="center"><iframe scrolling="no" frameborder="0" src="group__rand__sseh.svg" width="204" height="36"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
+</div>
 </td></tr></table></center>
 </div>
 <table class="memberdecls">
