--- a/documentation/html/server_2src_2_battleship_royale_8cpp.html
+++ b/documentation/html/server_2src_2_battleship_royale_8cpp.html
@@ -89,7 +89,8 @@ $(function() {
 </div><div class="textblock"><div class="dynheader">
 Граф включаемых заголовочных файлов для server/src/BattleshipRoyale.cpp:</div>
 <div class="dyncontent">
-<div class="center"><div class="zoom"><iframe scrolling="no" frameborder="0" src="server_2src_2_battleship_royale_8cpp__incl.svg" width="100%" height="518"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div></div>
+<div class="center"><div class="zoom"><iframe scrolling="no" frameborder="0" src="server_2src_2_battleship_royale_8cpp__incl.svg" width="100%" height="518"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
+</div>
 </div>
 </div>
 <p><a href="server_2src_2_battleship_royale_8cpp_source.html">См. исходные тексты.</a></p>
