--- a/documentation/html/client_2src_2_message_8h.html
+++ b/documentation/html/client_2src_2_message_8h.html
@@ -96,8 +96,7 @@ $(document).ready(function(){initNavTree('client_2src_2_message_8h.html','');});
 </div><div class="textblock"><div class="dynheader">
 Граф включаемых заголовочных файлов для client/src/Message.h:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="client_2src_2_message_8h__incl.svg" width="98" height="112"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="client_2src_2_message_8h__incl.svg" width="98" height="112"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div>
 <p><a href="client_2src_2_message_8h_source.html">См. исходные тексты.</a></p>
