--- a/documentation/html/dir_3513c77e68d0de165c8b48f945306dcb.html
+++ b/documentation/html/dir_3513c77e68d0de165c8b48f945306dcb.html
@@ -93,8 +93,7 @@ $(document).ready(function(){initNavTree('dir_3513c77e68d0de165c8b48f945306dcb.h
 <div class="dynheader">
 Директория графа зависимостей testing:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="dir_3513c77e68d0de165c8b48f945306dcb_dep.svg" width="531" height="212"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="dir_3513c77e68d0de165c8b48f945306dcb_dep.svg" width="531" height="212"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="subdirs"></a>
