--- a/documentation/html/_regex_8h.html
+++ b/documentation/html/_regex_8h.html
@@ -99,14 +99,12 @@ $(document).ready(function(){initNavTree('_regex_8h.html','');});
 </div><div class="textblock"><div class="dynheader">
 Граф включаемых заголовочных файлов для Regex.h:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="_regex_8h__incl.svg" width="82" height="112"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="_regex_8h__incl.svg" width="82" height="112"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div><div class="textblock"><div class="dynheader">
 Граф файлов, в которые включается этот файл:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="_regex_8h__dep__incl.svg" width="407" height="112"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="_regex_8h__dep__incl.svg" width="407" height="112"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div>
 <p><a href="_regex_8h_source.html">См. исходные тексты.</a></p>
