--- a/documentation/html/dir_6f2a338be031f1a5826289b3e6d326cd.html
+++ b/documentation/html/dir_6f2a338be031f1a5826289b3e6d326cd.html
@@ -93,8 +93,7 @@ $(document).ready(function(){initNavTree('dir_6f2a338be031f1a5826289b3e6d326cd.h
 <div class="dynheader">
 Директория графа зависимостей delete:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="dir_6f2a338be031f1a5826289b3e6d326cd_dep.svg" width="144" height="298"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="dir_6f2a338be031f1a5826289b3e6d326cd_dep.svg" width="144" height="298"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 <table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a name="files"></a>
