--- a/documentation/html/group__battleship-royale.html
+++ b/documentation/html/group__battleship-royale.html
@@ -98,8 +98,7 @@ $(document).ready(function(){initNavTree('group__battleship-royale.html','');});
 <div class="dynheader">
 Граф связей класса Battleship-Royale:</div>
 <div class="dyncontent">
-<center><table><tr><td><div class="center"><iframe scrolling="no" frameborder="0" src="group__battleship-royale.svg" width="311" height="36"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<center><table><tr><td><div class="center"><iframe scrolling="no" frameborder="0" src="group__battleship-royale.svg" width="311" height="36"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </td></tr></table></center>
 </div>
 <table class="memberdecls">
