--- a/documentation/html/group__battleshiproyalecpp.html
+++ b/documentation/html/group__battleshiproyalecpp.html
@@ -95,8 +95,7 @@ $(document).ready(function(){initNavTree('group__battleshiproyalecpp.html','');}
 <div class="dynheader">
 Граф связей класса BattleShiproyale.cpp:</div>
 <div class="dyncontent">
-<center><table><tr><td><div class="center"><iframe scrolling="no" frameborder="0" src="group__battleshiproyalecpp.svg" width="260" height="36"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<center><table><tr><td><div class="center"><iframe scrolling="no" frameborder="0" src="group__battleshiproyalecpp.svg" width="260" height="36"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </td></tr></table></center>
 </div>
 <table class="memberdecls">
