--- a/documentation/html/server_2src_2_mini_d_b_8cpp.html
+++ b/documentation/html/server_2src_2_mini_d_b_8cpp.html
@@ -97,8 +97,7 @@ $(document).ready(function(){initNavTree('server_2src_2_mini_d_b_8cpp.html','');
 </div><div class="textblock"><div class="dynheader">
 Граф включаемых заголовочных файлов для server/src/MiniDB.cpp:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="server_2src_2_mini_d_b_8cpp__incl.svg" width="316" height="187"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="server_2src_2_mini_d_b_8cpp__incl.svg" width="316" height="187"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div>
 <p><a href="server_2src_2_mini_d_b_8cpp_source.html">См. исходные тексты.</a></p>
