--- a/documentation/html/server_2src_2_regex_8cpp.html
+++ b/documentation/html/server_2src_2_regex_8cpp.html
@@ -102,8 +102,7 @@ $(document).ready(function(){initNavTree('server_2src_2_regex_8cpp.html','');});
 </div><div class="textblock"><div class="dynheader">
 Граф включаемых заголовочных файлов для server/src/Regex.cpp:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="server_2src_2_regex_8cpp__incl.svg" width="427" height="187"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="server_2src_2_regex_8cpp__incl.svg" width="427" height="187"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div>
 <p><a href="server_2src_2_regex_8cpp_source.html">См. исходные тексты.</a></p>
