--- a/documentation/html/server_2src_2_server_8h.html
+++ b/documentation/html/server_2src_2_server_8h.html
@@ -99,14 +99,12 @@ $(document).ready(function(){initNavTree('server_2src_2_server_8h.html','');});
 </div><div class="textblock"><div class="dynheader">
 Граф включаемых заголовочных файлов для server/src/Server.h:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="server_2src_2_server_8h__incl.svg" width="538" height="276"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="server_2src_2_server_8h__incl.svg" width="538" height="276"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div><div class="textblock"><div class="dynheader">
 Граф файлов, в которые включается этот файл:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="server_2src_2_server_8h__dep__incl.svg" width="264" height="112"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="server_2src_2_server_8h__dep__incl.svg" width="264" height="112"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div>
 <p><a href="server_2src_2_server_8h_source.html">См. исходные тексты.</a></p>
