--- a/documentation/html/server_2src_2con__handler_8cpp.html
+++ b/documentation/html/server_2src_2con__handler_8cpp.html
@@ -104,8 +104,7 @@ $(document).ready(function(){initNavTree('server_2src_2con__handler_8cpp.html','
 </div><div class="textblock"><div class="dynheader">
 Граф включаемых заголовочных файлов для server/src/con_handler.cpp:</div>
 <div class="dyncontent">
-<div class="center"><div class="zoom"><iframe scrolling="no" frameborder="0" src="server_2src_2con__handler_8cpp__incl.svg" width="100%" height="518"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
-</div>
+<div class="center"><div class="zoom"><iframe scrolling="no" frameborder="0" src="server_2src_2con__handler_8cpp__incl.svg" width="100%" height="518"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div></div>
 </div>
 </div>
 <p><a href="server_2src_2con__handler_8cpp_source.html">См. исходные тексты.</a></p>
