--- a/documentation/html/test_8cpp.html
+++ b/documentation/html/test_8cpp.html
@@ -98,8 +98,7 @@ $(document).ready(function(){initNavTree('test_8cpp.html','');});
 </div><div class="textblock"><div class="dynheader">
 Граф включаемых заголовочных файлов для test.cpp:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="test_8cpp__incl.svg" width="395" height="187"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="test_8cpp__incl.svg" width="395" height="187"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div>
 <p><a href="test_8cpp_source.html">См. исходные тексты.</a></p>
