--- a/documentation/html/testing_2server_2_server_8cpp.html
+++ b/documentation/html/testing_2server_2_server_8cpp.html
@@ -95,8 +95,7 @@ $(document).ready(function(){initNavTree('testing_2server_2_server_8cpp.html',''
 </div><div class="textblock"><div class="dynheader">
 Граф включаемых заголовочных файлов для testing/server/Server.cpp:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="testing_2server_2_server_8cpp__incl.svg" width="304" height="276"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="testing_2server_2_server_8cpp__incl.svg" width="304" height="276"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div>
 <p><a href="testing_2server_2_server_8cpp_source.html">См. исходные тексты.</a></p>
