--- a/documentation/html/testing_2server_2_server_8h.html
+++ b/documentation/html/testing_2server_2_server_8h.html
@@ -96,14 +96,12 @@ $(document).ready(function(){initNavTree('testing_2server_2_server_8h.html','');
 </div><div class="textblock"><div class="dynheader">
 Граф включаемых заголовочных файлов для testing/server/Server.h:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="testing_2server_2_server_8h__incl.svg" width="286" height="202"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="testing_2server_2_server_8h__incl.svg" width="286" height="202"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div><div class="textblock"><div class="dynheader">
 Граф файлов, в которые включается этот файл:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="testing_2server_2_server_8h__dep__incl.svg" width="200" height="112"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="testing_2server_2_server_8h__dep__incl.svg" width="200" height="112"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div>
 <p><a href="testing_2server_2_server_8h_source.html">См. исходные тексты.</a></p>
