--- a/documentation/html/testing_2server_2con__handler_8cpp.html
+++ b/documentation/html/testing_2server_2con__handler_8cpp.html
@@ -97,8 +97,7 @@ $(document).ready(function(){initNavTree('testing_2server_2con__handler_8cpp.htm
 </div><div class="textblock"><div class="dynheader">
 Граф включаемых заголовочных файлов для testing/server/con_handler.cpp:</div>
 <div class="dyncontent">
-<div class="center"><iframe scrolling="no" frameborder="0" src="testing_2server_2con__handler_8cpp__incl.svg" width="615" height="216"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe>
-</div>
+<div class="center"><iframe scrolling="no" frameborder="0" src="testing_2server_2con__handler_8cpp__incl.svg" width="615" height="216"><p><b>This browser is not able to show SVG: try Firefox, Chrome, Safari, or Opera instead.</b></p></iframe></div>
 </div>
 </div>
 <p><a href="testing_2server_2con__handler_8cpp_source.html">См. исходные тексты.</a></p>
